{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 88,
  "lineage": "09eac6f8-d680-eacc-0070-b67b0061230a",
  "resources": [
    {
      "module": "module.ledger",
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094458522773:vpc/vpc-016db0b3da943c5a1",
            "cidr_block": "10.25.0.0/21",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-08161ee363a4c167a",
                "cidr_block": "10.25.0.0/21",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-25fa685f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-016db0b3da943c5a1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d49a3660f3701f42",
            "owner_id": "094458522773",
            "tags": {
              "Name": "NAESB - DLT"
            }
          }
        }
      ]
    },
    {
      "module": "module.ledger",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05b5badc2f7ddd88d",
            "get_password_data": false,
            "iam_instance_profile": "terraform-20230309060534714200000004",
            "id": "i-07860bbe8decad173",
            "instance_type": "t3.medium",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_size": 50
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d2e9f1cb9c479b60",
            "tags": {
              "Name": "naesb-indy-dev-indy-network",
              "app": "naesb-indy",
              "owner": "dev"
            },
            "tags_all": {
              "Name": "naesb-indy-dev-indy-network",
              "app": "naesb-indy",
              "owner": "dev"
            },
            "vpc_security_group_ids": [
              "sg-09477e1e0aa3c6255"
            ]
          },
          "dependencies": [
            "module.ledger.aws_cloudwatch_log_group.admin",
            "module.ledger.aws_iam_instance_profile.this",
            "module.ledger.aws_iam_role.instance_role",
            "module.ledger.aws_iam_role_policy.this",
            "module.ledger.aws_s3_bucket.this",
            "module.ledger.aws_s3_bucket_object.this",
            "module.ledger.aws_security_group.this",
            "module.ledger.data.aws_ami.amazon-linux-2",
            "module.ledger.data.aws_iam_policy_document.this",
            "module.ledger.data.aws_region.current",
            "module.ledger.data.template_file.this"
          ]
        }
      ]
    },
    {
      "module": "module.ledger",
      "mode": "managed",
      "type": "aws_lb",
      "name": "ecs_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "desync_mitigation_mode": "defensive",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:094458522773:loadbalancer/app/dev-naesb-indy/a9a68c2fa55d9318",
            "idle_timeout": 60,
            "internal": false,
            "load_balancer_type": "application",
            "name": "dev-naesb-indy",
            "security_groups": [
              "sg-09477e1e0aa3c6255"
            ],
            "subnets": [
              "subnet-02dadc10b3ea94c35",
              "subnet-0d2e9f1cb9c479b60"
            ],
            "tags": {
              "Name": "dev-naesb-indy",
              "app": "naesb-indy",
              "owner": "dev"
            },
            "tags_all": {
              "Name": "dev-naesb-indy",
              "app": "naesb-indy",
              "owner": "dev"
            }
          },
          "dependencies": [
            "module.ledger.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.ledger",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ledger",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "tails_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ledger",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:094458522773:targetgroup/dev20230309060533112100000002/d2e0a8523007dbd5",
            "arn_suffix": "targetgroup/dev20230309060533112100000002/d2e0a8523007dbd5",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 60,
                "matcher": "200",
                "path": "/api/nodes",
                "port": "443",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:094458522773:targetgroup/dev20230309060533112100000002/d2e0a8523007dbd5",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "dev20230309060533112100000002",
            "name_prefix": "dev",
            "port": 443,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "dev-naesb-indy",
              "app": "naesb-indy",
              "owner": "dev"
            },
            "tags_all": {
              "Name": "dev-naesb-indy",
              "app": "naesb-indy",
              "owner": "dev"
            },
            "target_type": "instance",
            "vpc_id": "vpc-016db0b3da943c5a1"
          }
        }
      ]
    },
    {
      "module": "module.ledger",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tails",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:094458522773:targetgroup/dev20230309060533118100000003/2f09bee7866418e9",
            "arn_suffix": "targetgroup/dev20230309060533118100000003/2f09bee7866418e9",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 60,
                "matcher": "200-499",
                "path": "/",
                "port": "6543",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:094458522773:targetgroup/dev20230309060533118100000003/2f09bee7866418e9",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "dev20230309060533118100000003",
            "name_prefix": "dev",
            "port": 6543,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "dev-naesb-indy-tails",
              "app": "naesb-indy",
              "owner": "dev"
            },
            "tags_all": {
              "Name": "dev-naesb-indy-tails",
              "app": "naesb-indy",
              "owner": "dev"
            },
            "target_type": "instance",
            "vpc_id": "vpc-016db0b3da943c5a1"
          }
        }
      ]
    },
    {
      "module": "module.ledger",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tails",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.ledger",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.ledger",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:094458522773:security-group/sg-09477e1e0aa3c6255",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09477e1e0aa3c6255",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6543,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6543
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9700,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9710
              }
            ],
            "name": "naesb-indy-dev-indy-network",
            "name_prefix": "",
            "owner_id": "094458522773",
            "revoke_rules_on_delete": false,
            "tags": {
              "app": "naesb-indy",
              "owner": "dev"
            },
            "tags_all": {
              "app": "naesb-indy",
              "owner": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-016db0b3da943c5a1"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}